tests/cases/structs/ok/union-by-constructor.ari
enum CipherType {
  stream,
  block,
  aead,
}

struct SecurityParameters {
  cipher_type: CipherType,
}

struct GenericStreamCipher {
  value: i64,
}

struct GenericBlockCipher {
  value: i64,
}

struct GenericAeadCipher {
  value: i64,
}

struct TLSCiphertext {
  security: SecurityParameters,
  length: u16,
  fragment: union by security.cipher_type {
    stream => GenericStreamCipher,
    block => GenericBlockCipher,
    aead => GenericAeadCipher,
  },
}

fn make_stream_ciphertext() -> TLSCiphertext {
  return TLSCiphertext {
    security: SecurityParameters { cipher_type: stream },
    length: 7 as u16,
    fragment: stream => GenericStreamCipher { value: 41 },
  };
}

fn main() -> i64 {
  let packet = make_stream_ciphertext();
  return packet.length as i64;
}
